# NostrO2

./: .cargo-crap.toml  .gitignore  BENCHMARKING.md  BENCHMARK_ORGANIZATION.md  Cargo.toml  LICENSE  README.md  ansible-benchmark.yml
bench/comparison/: Cargo.toml
bench/comparison/benches/: nostr_comparison.rs
benches/: Cargo.toml  crypto.rs  deduplication.rs  nip104.rs  nostr_comparison.rs  subscription.rs
benches/src/: lib.rs
crates/cache/: Cargo.toml  README.md
crates/cache/benches/: deduplication.rs
crates/cache/src/: lib.rs
crates/core/: Cargo.toml
crates/nips/: Cargo.toml  README.md
crates/nips/src/: lib.rs  nip_04.rs  nip_104.rs  nip_104_group.rs  nip_104_invite.rs  nip_104_manager.rs  nip_104_sender_key.rs  nip_17.rs  nip_44.rs  nip_46.rs  nip_59.rs
crates/nips/src/nip_104/: group.rs  invite.rs  manager.rs  mod.rs  sender_key.rs
crates/nips/test-vectors/: nip104-rust-generated.json
crates/relay/: Cargo.toml
crates/relay/benches/: README.md  deduplication.rs  relay_benchmarks.rs
crates/relay/examples/: keygen.rs  local_relay.rs  memory_test.rs  nip104_iris_dm.rs  nip104_iris_group.rs  nip104_iris_invite.rs  nip104_iris_listen.rs  nip44_interop.rs  relay_test.rs  simple_test.rs
crates/relay/src/: errors.rs  relay.rs
crates/signer/: Cargo.toml
crates/traits/: Cargo.toml
crates/traits/benches/: hex_bench.rs
crates/traits/src/: bech32.rs  hex.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_client_event_parse.rs  fuzz_hex.rs  fuzz_note_id.rs  fuzz_note_parse.rs  fuzz_note_view_parse.rs  fuzz_relay_event_parse.rs  fuzz_subscription_matches.rs  fuzz_subscription_parse.rs
nips/: Cargo.toml
nips/src/: lib.rs  nip_04.rs  nip_17.rs  nip_44.rs  nip_46.rs  nip_59.rs  nip_82.rs
nostro2/: Cargo.toml
nostro2-benchmarks/: Cargo.toml
nostro2-benchmarks/benches/: crypto_comparison.rs  deduplication.rs  nostr_comparison.rs  serialization.rs  subscription.rs
nostro2-benchmarks/src/: lib.rs
nostro2-cache/: Cargo.toml  README.md
nostro2-relay/: BENCHMARKS.md  Cargo.toml  README.md
nostro2-relay/benches/: README.md  deduplication.rs  relay_benchmarks.rs
nostro2-relay/examples/: local_relay.rs  memory_test.rs  relay_test.rs  simple_test.rs
nostro2-relay/src/: errors.rs  lib.rs  pool.rs  relay.rs
nostro2-ring-relay/: Cargo.toml
nostro2-ring-relay/benches/: large_payload.rs  local_throughput.rs  max_throughput.rs  ring_pool.rs  throughput_comparison.rs
nostro2-ring-relay/examples/: Caddyfile  bidirectional_test.rs  local_bench.rs  local_server.rs  max_throughput_test.rs  memory_test.rs  ring_memory_test.rs  ring_simple_test.rs  simple_test.rs  throughput_tuning.rs  uring_test.rs
nostro2-ring-relay/src/: ktls.rs  lib.rs  reader.rs  writer.rs
nostro2-ring-relay/src/uring/: ktls.rs  mod.rs  reader.rs  writer.rs  ws.rs
nostro2-signer/: Cargo.toml
nostro2-signer/benches/: crypto.rs  crypto_comparison.rs
nostro2-signer/src/: errors.rs  ext.rs  k256_keypair.rs  keypair.rs  lib.rs  nip_04.rs  nip_44.rs  secp256k1_keypair.rs
nostro2-traits/: Cargo.toml
nostro2-traits/src/: lib.rs
nostro2-web-relay/: Cargo.toml  webdriver.json
nostro2-web-relay/src/: lib.rs  pool.rs  relay.rs  wasm_connection.rs
nostro2-web-signer/: Cargo.toml
nostro2-web-signer/src/: lib.rs
nostro2-web-signer/src/nips/: mod.rs  nip_04.rs  nip_44.rs  nip_46.rs  nip_59.rs  nip_82.rs
nostro2/benches/: README.md  serialization.rs  subscription.rs  verification.rs
nostro2/src/: errors.rs  lib.rs  note.rs  relay_events.rs  subscriptions.rs  tags.rs  view.rs
relay-client/: Cargo.toml
relay-client/benches/: large_payload.rs  local_throughput.rs  max_throughput.rs  ring_pool.rs  throughput_comparison.rs
relay-client/examples/: bidirectional_test.rs  local_bench.rs  local_server.rs  max_throughput_test.rs  monitor.sh  ring_memory_test.rs  ring_simple_test.rs  throughput_tuning.rs  uring_test.rs
relay-client/src/: ktls.rs  syscall.rs
ring-relay-client/: Cargo.toml
ring-relay-client/benches/: large_payload.rs  local_throughput.rs  max_throughput.rs  ring_pool.rs  throughput_comparison.rs
ring-relay-client/examples/: bidirectional_test.rs  local_bench.rs  local_server.rs  max_throughput_test.rs  monitor.sh  ring_memory_test.rs  ring_simple_test.rs  throughput_tuning.rs  uring_test.rs
ring-relay-client/src/: ktls.rs  lib.rs  reader.rs  reconnect.rs  syscall.rs  writer.rs
ring-relay-nostr/: Cargo.toml
ring-relay-nostr/benches/: compare_fanout.rs  compare_ingest.rs  compare_ingest_large.rs  compare_ingest_persistent.rs  event_ingest.rs  event_ingest_multi.rs  event_verify.rs  fanout.rs  fanout_match.rs  fanout_multi.rs  filter_match.rs  idle_scale.rs  protocol_parse.rs  write_ring_topology.rs
ring-relay-nostr/benches/common/: mod.rs
ring-relay-nostr/examples/: fanout_relay_server.rs  fanout_throughput_driver.rs  heap_fanout_driver.rs  heap_fanout_live.rs  heap_fanout_live_compare.rs  heap_fanout_relay_server.rs  heap_fanout_view.rs  heap_fanout_view_reserialize.rs  heap_ingest_multi.rs  heap_ingest_persistent_compare.rs  heap_parse_ingest.rs  heap_parse_ingest_view.rs  large_ingest_driver.rs  profile_load_fanout.rs  profile_load_ingest.rs  profile_server.rs  relay.rs
ring-relay-nostr/src/: backoff.rs  extension.rs  filter.rs  info.rs  lib.rs  protocol.rs  shard.rs  verify_pool.rs
ring-relay-nostr/src/storage/: bucket.rs  engine.rs  handle.rs  index.rs  log.rs  mod.rs  reader.rs  slot.rs
ring-relay-nostr/tests/: auth.rs  compare_smoke.rs  deletion.rs  deletion_address.rs  expiration.rs  extension.rs  nip11.rs  persistence.rs  pow.rs  relay.rs  truthful_ok.rs
ring-relay-server/: Cargo.toml
ring-relay-server/benches/: broadcast_throughput.rs  connection_storm.rs  echo_throughput.rs
ring-relay-server/examples/: echo.rs
ring-relay-server/src/: kernel_tls.rs  lib.rs  listener.rs  reader.rs  syscall.rs  writer.rs
ring-relay-server/tests/: echo.rs  ktls.rs
src/: errors.rs  keypair.rs  lib.rs  nip_46.rs  nostr.rs  notes.rs  pool.rs  relays.rs  userkeys.rs  utils.rs
src/nips/: mod.rs  nip_04.rs  (+2 more)
tests/: main.rs  main_async.rs
(+32 files in other folders)
