[workspace]
resolver="2"

members = [
    "nips",
    "nostro2", "nostro2-cache",
    "nostro2-relay",
    "nostro2-signer",
    "nostro2-traits",
]
exclude = ["nostro2-benchmarks"]

[workspace.dependencies.nostro2-traits]
path = "nostro2-traits"
version = "0.1.0"

[workspace.dependencies]
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

thiserror = "2.0.16"

# Inner crates take `default-features = false` so consumers can opt into a
# specific curve backend without dragging in the default `k256`. Pick one of
# `k256` or `secp256k1` at the top of the dep tree — see the `compile_error!`
# in `nostro2/src/lib.rs`.
nostro2 = { path = "nostro2", version = "0.5.0", default-features = false }
nostro2-nips = { path = "nips", version = "0.2.0", default-features = false }
nostro2-signer = { path = "nostro2-signer", version = "0.3.0", default-features = false }

# nostro2-cache = { path = "nostro2-cache" }
nostro2-cache = { path = "nostro2-cache", version = "0.1.0" }

# Cryptography
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chacha20 = "0.9"
hex = "0.4.3"
hkdf = "0.12"
hmac = "0.12"
libaes = "0.7"
# k256 = { version = "0.13.4", features = ["schnorr", "ecdh"] }
k256 = { path = "../../forfun/elliptic-curves/k256", features = ["schnorr", "ecdh"] }
secp256k1 = { version = "0.29", features = ["rand", "global-context", "hashes"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
zeroize = "1.8"

# Key helpers
bech32 = "0.11"
bip39 = { version = "2.1", features = ["spanish"] }

# Native platform TCP (still used by nostro2-relay / nostro2-benchmarks)
tokio = { version = "^1.44" }

# Miscellanea utility
futures-util = { version = "0.3", features = ["sink", "std"] }
chrono = "0.4"
tracing-test = "0.2"
lru = "0.12"

ring = "^0.17.12"
tokio-tungstenite-wasm = { version = "0.4.0", features = ["rustls-tls-webpki-roots"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

