[workspace]
resolver="2"
exclude = ["fuzz"]

members = [
    "crates/core",
    "crates/traits",
    "crates/nips",
    "crates/signer",
    "crates/cache",
    #"crates/relay",
    "bench/comparison",
]

[workspace.dependencies.nostro2-traits]
path = "crates/traits"
version = "0.1.0"

[workspace.dependencies]
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
bourne = { path = "../../tooling/bourne/crates/bourne" }

nostro2 = { path = "crates/core", version = "0.5.0", default-features = false }
nostro2-nips = { path = "crates/nips", version = "0.2.0", default-features = false }
nostro2-signer = { path = "crates/signer", version = "0.3.0", default-features = false }
nostro2-cache = { path = "crates/cache", version = "0.1.0" }

# Cryptography
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chacha20 = "0.9"
hkdf = "0.12"
hmac = "0.12"
libaes = "0.7"
k256 = { path = "../../forfun/elliptic-curves/k256", default-features = false, features = ["schnorr", "ecdh"] }
secp256k1 = { version = "0.29", features = ["rand", "global-context", "hashes"] }
getrandom = "0.4"
sha2 = "0.10"
zeroize = "1.8"

# Key helpers
bech32 = "0.11"
bip39 = { version = "2.1", features = ["spanish"] }

# Async
tokio = { version = "^1.44" }
futures-util = { version = "0.3", features = ["sink", "std"] }

# Misc
chrono = "0.4"
tracing-test = "0.2"
lru = "0.12"
ring = "^0.17.12"
tokio-tungstenite-wasm = { version = "0.4.0", features = ["rustls-tls-webpki-roots"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3" }

# Property testing
proptest = "1"

# Benchmarking
divan = "0.1"
