[workspace]
resolver="2"
exclude = ["fuzz"]

members = [
    "crates/core",
    "crates/traits",
    "crates/nips",
    "crates/signer",
    "crates/cache",
    "crates/relay",
    "benches",
]

[workspace.dependencies.nostro2-traits]
path = "crates/traits"
version = "0.2.0"

[workspace.dependencies]
# JSON
bourne = { package = "json-bourne", version = "0.1" }

nostro2 = { path = "crates/core", version = "0.6.0", default-features = false }
nostro2-nips = { path = "crates/nips", version = "0.3.0", default-features = false }
nostro2-signer = { path = "crates/signer", version = "0.4.0", default-features = false }
nostro2-cache = { path = "crates/cache", version = "0.2.0" }

# Cryptography
base64 = "0.22"
chacha20 = "0.10"
hkdf = "0.13"
hmac = "0.13"
k256 = { version = "0.14.0-rc.12", default-features = false, features = ["schnorr", "ecdh", "precomputed-tables", "std"] }
secp256k1 = { version = "0.31", features = ["rand", "global-context", "hashes"] }
getrandom = "0.4"
sha2 = "0.11"
zeroize = "1.8"

# Key helpers
xinachtli = { version = "0.1", features = ["english", "spanish"] }

# Async
tokio = { version = "^1.44" }
futures-util = { version = "0.3", features = ["sink", "std"] }

# Misc
chrono = "0.4"
tracing-test = "0.2"
lru = "0.12"
ring = "^0.17.12"
tokio-tungstenite-wasm = { version = "0.4.0", features = ["rustls-tls-webpki-roots"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3" }

# Property testing
proptest = "1"

# Benchmarking
divan = "0.1"
