[package]
name = "nostro2-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-library comparison benchmarks (nostro2 vs upstream nostr crate)."

[features]
default = ["k256"]
k256 = [
    "nostro2/k256",
    "nostro2-signer/k256",
    "nostro2-nips/k256",
]
secp256k1 = [
    "nostro2/secp256k1",
    "nostro2-signer/secp256k1",
    "nostro2-nips/secp256k1",
]

[dependencies]

[dev-dependencies]
nostro2 = { workspace = true }
nostro2-signer = { workspace = true }
nostro2-nips = { workspace = true }
divan.workspace = true
bourne.workspace = true
serde_json = "1"
nostr = { version = "0.44", features = ["nip44"] }
# Direct access to the raw curve primitives so `verify_sig_only` can call
# Schnorr verify without the JSON/SHA-256 wrapping in `note.verify()`. These
# resolve through the workspace `[patch.crates-io]`, so they pick up the local
# k256 fork. Each is only referenced under its matching `#[cfg(feature)]`.
k256 = { workspace = true }
secp256k1 = { workspace = true }

[[bench]]
name = "nostr_comparison"
path = "nostr_comparison.rs"
harness = false

[[bench]]
name = "crypto"
path = "crypto.rs"
harness = false
