[package]
name = "nostro2-nips"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
base64.workspace = true
chacha20.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
libaes.workspace = true
nostro2.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zeroize.workspace = true

