[package]
name = "nostro2-nips"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
base64.workspace = true
chacha20.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
k256.workspace = true
libaes.workspace = true
nostro2.workspace = true
nostro2-traits.workspace = true
rand.workspace = true
rand_core.workspace = true
getrandom = "0.4"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
bech32.workspace = true

