[package]
name = "nostro2-nips"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[features]
default = ["k256"]
# These features only forward to `nostro2` so that `note.verify()` (which is
# itself feature-gated on a curve) is available from inside the NIP impls.
# `nostro2-nips` does not link any curve crate of its own — Schnorr signing
# goes through the `NostrSigner` trait, ECDH through `NostrKeypair`, and
# verification through `NostrNote::verify`. The HKDF/HMAC/SHA2 primitives
# used by NIP-04/NIP-44 come from their own RustCrypto crates.
k256 = ["nostro2/k256"]
secp256k1 = ["nostro2/secp256k1"]

[dependencies]
base64.workspace = true
chacha20.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
libaes.workspace = true
nostro2 = { workspace = true, default-features = false }
nostro2-traits.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
bech32.workspace = true
# Tests need a concrete keypair to exercise the trait-bounded NIP impls;
# `NipTester` in `lib.rs` wraps `k256::schnorr::SigningKey` for that.
# Production code in this crate has no curve dependency.
k256.workspace = true

