[package]
name = "nostro2-relay"
version = "0.1.3"
edition = "2021"
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
nostro2.workspace =true 

tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring", "std", "tls12"], default-features = false }

[dev-dependencies]
nostro2-signer.workspace = true
