[package]
name = "nostro2-ring-relay"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Lock-free ring buffer relay pool for the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
homepage = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
categories = ["network-programming", "concurrency"]
keywords = ["nostr", "relay", "ringbuffer", "lock-free", "websocket"]

[dependencies]
nostro2 = { workspace = true }
nostro2-cache = { path = "../nostro2-cache", version = "0.1.0" }
quetzalcoatl = "0.3.0"
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
serde_json = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nostro2-relay = { path = "../nostro2-relay", version = "0.3.0" }
nostro2-signer = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }

[[bench]]
name = "ring_pool"
harness = false

[[bench]]
name = "throughput_comparison"
harness = false

[[bench]]
name = "max_throughput"
harness = false

[[bench]]
name = "large_payload"
harness = false
