[package]
name = "nostro2-signer"
version = "0.1.2"
edition = "2021"
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"


[dependencies]
base64.workspace = true
bech32.workspace = true
bip39.workspace = true
chacha20.workspace = true
hkdf.workspace = true
hmac.workspace = true
libaes.workspace = true
nostro2.workspace = true
secp256k1.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true
nips.workspace = true
