[package]
name = "nostro2-signer"
version = "0.3.0"
edition = "2021"
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"


[dependencies]
base64.workspace = true
bech32.workspace = true
bip39.workspace = true
hex.workspace = true
k256.workspace = true
nostro2.workspace = true
nostro2-nips.workspace = true
rand_core.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_comparison"
harness = false
