[package]
name = "nostro2-web-relay"
version = "0.1.6"
edition = "2021"
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"


[dependencies]

futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent"] }
nostro2.workspace =true 
wasm-bindgen-futures.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
nostro2-signer.workspace = true
