[package]
name = "nostro2-web-signer"
version = "0.1.0"
edition = "2021"
categories = ["cryptography"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
futures = "0.3.31"
nostro2.workspace = true
wasm-bindgen = "0.2.100"
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-sys = { workspace = true, features = ["Window", "Document"] }
