[package]
name = "nostro2"
version = "0.3.6"
edition = "2021"
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
bech32.workspace = true
chrono.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ring = { workspace = true, features = ["wasm32_unknown_unknown_js"] }
serde-wasm-bindgen.workspace = true
## web-sys.workspace = true

