[package]
name = "nostro2"
version = "0.4.3"
edition = "2021"
categories = ["authentication", "cryptography", "web-programming"]
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
hex.workspace = true
k256.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ring = { workspace = true, features = ["wasm32_unknown_unknown_js"] }
js-sys = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nostro2-signer.workspace = true

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "subscription"
harness = false

[[bench]]
name = "verification"
harness = false

