[package]
name = "ring-relay-client"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Lock-free ring buffer relay client for the Nostr protocol with kTLS + io_uring."
repository = "https://github.com/42Pupusas/NostrO2.git"
homepage = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
categories = ["network-programming", "concurrency"]
keywords = ["nostr", "relay", "ringbuffer", "lock-free", "io-uring"]

[dependencies]
# Nostr protocol
nostro2 = { workspace = true }
# Ring buffers
quetzalcoatl = "0.5.0"
serde_json = { workspace = true }
# WebSockets RFC6455 codec
coyoquil = "0.1.0"
# IO-uring
ququmatz = "0.1.0"
# TLS
rustls = { workspace = true }
rustls-native-certs = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nostro2-cache = { path = "../nostro2-cache", version = "0.1.0" }
nostro2-relay = { path = "../nostro2-relay", version = "0.3.0" }
nostro2-signer = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
tungstenite = { version = "0.26" }
nostr-sdk = "0.44"
futures-util = { workspace = true }

[[bench]]
name = "local_throughput"
harness = false

[[bench]]
name = "ring_pool"
harness = false

[[bench]]
name = "throughput_comparison"
harness = false

[[bench]]
name = "max_throughput"
harness = false

[[bench]]
name = "large_payload"
harness = false
