[package]
name = "ring-relay-nostr"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ephemeral Nostr relay (NIP-01) built on ring-relay-server."
repository = "https://github.com/42Pupusas/NostrO2.git"
homepage = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
categories = ["network-programming", "concurrency"]
keywords = ["nostr", "relay", "nip-01", "ephemeral", "io-uring"]

[dependencies]
ring-relay-server = { path = "../ring-relay-server", version = "0.1.0" }
nostro2 = { workspace = true }
serde = { workspace = true }
# `raw_value` lets us capture the original note JSON substring during
# frame parse and splice it straight into fan-out frames, skipping the
# re-serialization pass entirely.
serde_json = { workspace = true, features = ["raw_value"] }
# Lock-free broadcast ring for cross-shard sub replication.
quetzalcoatl = "0.6.0"

[features]
default = []
# Enable kernel-offloaded TLS (kTLS) on the server side.
# Requires Linux with the `tls` kernel module loaded.
ktls = ["ring-relay-server/ktls"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-tungstenite = { workspace = true }
tungstenite = "0.26"
futures-util = { workspace = true }
nostro2-signer = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
# Head-to-head comparison against the actix+LMDB relay library.
nostr-relay = "0.4.8"
tempfile = "3"
actix-rt = "2"
actix-web = "4"
# Heap profiler. Enabled via the `dhat-heap` feature on the measurement
# examples below — dropping in `dhat::Profiler::new_heap()` records every
# allocation and writes `dhat-heap.json` for `dh_view.html`.
dhat = "0.3"

[[example]]
name = "relay"

[[example]]
name = "profile_server"

[[example]]
name = "profile_load_ingest"

[[example]]
name = "profile_load_fanout"

# Heap-profile the client→relay parse path. Run with:
#   cargo run --release --example heap_parse_ingest
# Produces `dhat-heap.json` in the cwd; open in `dh_view.html`.
[[example]]
name = "heap_parse_ingest"

# Same workload as `heap_parse_ingest`, but parses into `NostrNoteView<'_>`
# (borrowed, zero-copy). Run with:
#   cargo run --release --example heap_parse_ingest_view
# Diff the resulting `dhat-heap.json` against the owned baseline.
[[example]]
name = "heap_parse_ingest_view"

# Fan-out heap profile: parse one EVENT frame, emit N outbound
# subscriber frames using the RawValue splice (verbatim).
[[example]]
name = "heap_fanout_view"

# Same fan-out workload but reserializing the view to JSON per event,
# so we can A/B the RawValue optimization against the old path.
[[example]]
name = "heap_fanout_view_reserialize"

# End-to-end heap profile: real NostrRelay + real WebSocket subscribers,
# measures total alloc traffic along the live fan-out path.
[[example]]
name = "heap_fanout_live"

# Same fan-out heap profile, parameterized to swap between ring-relay-nostr
# and nostr-relay 0.4.8 (RELAY=ring|nostr). Apples-to-apples memory diff.
[[example]]
name = "heap_fanout_live_compare"

# Relay-only heap profile. `heap_fanout_relay_server` runs one relay under
# dhat; `heap_fanout_driver` runs the client workload in a separate process
# against it. dhat's output then reflects relay-side heap only, with no
# tokio/tungstenite/signer noise.
[[example]]
name = "heap_fanout_relay_server"

[[example]]
name = "heap_fanout_driver"

# Throughput twin of the heap harness: `fanout_relay_server` is the same
# relay-spawning shape without the dhat global allocator (so it measures
# real fan-out rate, not allocator-wrapper overhead), and
# `fanout_throughput_driver` runs the client workload + timing.
[[example]]
name = "fanout_relay_server"

[[example]]
name = "fanout_throughput_driver"

# Split-process large-event ingest harness. Spawns `fanout_relay_server` as
# a subprocess (RELAY=ring|nostr) and drives many publishers sending large
# EVENTs; reports MiB/s and events/s. Complements `compare_ingest_large`
# criterion bench by running the relay in its own process with a larger
# workload amortized over the full run.
[[example]]
name = "large_ingest_driver"

[[bench]]
name = "filter_match"
harness = false

[[bench]]
name = "protocol_parse"
harness = false

[[bench]]
name = "event_verify"
harness = false

[[bench]]
name = "event_ingest"
harness = false

[[bench]]
name = "event_ingest_multi"
harness = false

[[bench]]
name = "fanout"
harness = false

[[bench]]
name = "fanout_multi"
harness = false

[[bench]]
name = "compare_ingest"
harness = false

[[bench]]
name = "compare_ingest_persistent"
harness = false

[[bench]]
name = "compare_ingest_large"
harness = false

[[bench]]
name = "compare_fanout"
harness = false

[[bench]]
name = "idle_scale"
harness = false
