[package]
name = "ring-relay-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lock-free WebSocket relay server using io_uring and ring buffers."
repository = "https://github.com/42Pupusas/NostrO2.git"
homepage = "https://github.com/42Pupusas/NostrO2.git"
readme = "../README.md"
categories = ["network-programming", "concurrency"]
keywords = ["nostr", "relay", "websocket", "lock-free", "io-uring"]

[dependencies]
# Ring buffers
quetzalcoatl = "0.6.0"
serde_json = { workspace = true }
# WebSocket RFC6455 codec
coyoquil = "0.2.1"
# IO-uring
ququmatz = "0.4.0"
# TLS (optional — only for kTLS)
rustls = { workspace = true, optional = true }

[features]
default = []
# Enable kTLS termination on the server side.
# Requires Linux kernel with CONFIG_TLS and `modprobe tls` loaded.
ktls = ["dep:rustls"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tungstenite = "0.26"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
# For kTLS integration tests
rustls = { workspace = true }
rcgen = "0.13"
rustls-pemfile = "2"

[[example]]
name = "echo"

[[bench]]
name = "echo_throughput"
harness = false

[[bench]]
name = "broadcast_throughput"
harness = false

[[bench]]
name = "connection_storm"
harness = false
